Fix confirm content not wrapping

--- a/src/components/confirm/confirm.scss
+++ b/src/components/confirm/confirm.scss
@@ -3,6 +3,7 @@
 .confirm-dialog {
   &__content {
     margin: 0;
+    text-wrap: auto;
   }
 
   &::part(footer) {
@@ -14,7 +15,7 @@
   }
 
   &--has-default-slot &__content {
-    margin-bottom: var(--zn-spacing-large)
+    margin-bottom: var(--zn-spacing-large);
   }
 
   &--error::part(title) {
